# cloudflare-cli

./: .gitignore  Cargo.toml  ip-update.sh  musl.Dockerfile
.github/workflows/: ci.yaml
cloudflare-0.10.1/: .cargo_vcs_info.json  Cargo.toml
cloudflare-0.10.1/src/endpoints/: dns.rs
src/: config.rs  lib.rs  main.rs  terminal.rs
src/api/endpoints/: account.rs  cache.rs  dns.rs  zones.rs
src/commands/: accounts.rs  cache.rs  config.rs  dns.rs  mod.rs  zones.rs
