[package]
name = "cflare"
version = "0.2.0"
authors = ["Carlos Yakimov <carlos@cyakimov.com>"]
license = "MIT/Apache-2.0"
description = "Cloudflare command-line tool"
edition = "2021"
readme = "README.md"
keywords = ["cloudflare", "cli"]
homepage = "https://github.com/cyakimov/cloudflare-cli"
repository = "https://github.com/cyakimov/cloudflare-cli"
categories = ["command-line-utilities"]

[dependencies]
clap = "2.34.0"
cloudflare = { version = "0.10.1"}
serde_json = "1.0"
serde = "1.0.164"
tabular = "0.2.0"
text_io = "0.1.12"
colored = "2.0.0"
failure = "0.1.8"
dirs = "5.0.1"
toml = "0.7.5"
chrono = "0.4.26"
openssl = { version = "0.10", features = ["vendored"] }
